[package]
name = "stable-diffusion-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
tensorflow = { version = "0.19.1", features = ["tensorflow_gpu", "eager"] }
